<resources>
    <string name="app_name">Simple Calendar</string>
    <string name="app_launcher_name">Calendar</string>
    <string name="my_app_name">Calendar Manager</string>
    <string name="change_view">Change view</string>
    <string name="weekly_view">Weekly view</string>
    <string name="monthly_view">Monthly view</string>
    <string name="yearly_view">Yearly view</string>
    <string name="simple_event_list">Simple event list</string>
    <string name="no_upcoming_events">Seems like you don\'t have any upcoming events.</string>
    <string name="add_some_events">You can add some with the Plus button at the bottom.</string>
    <string name="details">Details</string>
    <string name="go_to_today">Go to today</string>
    <string name="snooze">Snooze</string>
    <string name="packegename">phamtuan.calendar</string>
    <string name="widget_monthly">Calendar monthly</string>
    <string name="widget_list">Calendar event list</string>
    <string name="event">Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="new_event">New Event</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="end_before_start">The event cannot end earlier than it starts</string>
    <string name="event_added">Event added successfully</string>
    <string name="event_updated">Event updated successfully</string>
    <string name="filter_events_by_type">Filter events by type</string>
    <string name="repetition">Repetition</string>
    <string name="no_repetition">No repetition</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="weeks_raw">weeks</string>
    <string name="months_raw">months</string>
    <string name="years_raw">years</string>
    <string name="repeat_till">Repeat till</string>
    <string name="forever">Forever</string>
    <string name="event_is_repeatable">The event is repeatable</string>
    <string name="selection_contains_repetition">The selection contains repeating events</string>
    <string name="delete_one_only">Delete the selected occurrence only</string>
    <string name="delete_all_occurrences">Delete all occurrences</string>
    <string name="update_one_only">Update the selected occurrence only</string>
    <string name="update_all_occurrences">Update all occurrences</string>
    <string name="repeat_till_date">Repeat till a date</string>
    <string name="repeat_x_times">Repeat x times</string>
    <string name="repeat_forever">Repeat forever</string>
    <string name="times">times</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_on">Repeat on</string>
    <string name="every_day">Every day</string>
    <string name="selected_days">On selected days</string>
    <string name="the_same_day">The same day</string>
    <string name="the_last_day">The last day</string>
    <string name="repeat_on_the_same_day">Repeat on the same day each month</string>
    <string name="repeat_on_the_last_day">Repeat on the last day of the month</string>
    <string name="repeat_every_m">Repeat every</string>
    <string name="every_m">Every</string>
    <string name="first_m">first</string>
    <string name="second_m">second</string>
    <string name="third_m">third</string>
    <string name="fourth_m">fourth</string>
    <string name="last_m">last</string>
    <string name="repeat_every_f">Repeat every</string>
    <string name="every_f">Every</string>
    <string name="first_f">first</string>
    <string name="second_f">second</string>
    <string name="third_f">third</string>
    <string name="fourth_f">fourth</string>
    <string name="last_f">last</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="birthdays">Birthdays</string>
    <string name="add_birthdays">Add Contact birthdays</string>
    <string name="no_birthdays">No birthdays have been found</string>
    <string name="birthdays_added">Birthdays added successfully</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="add_anniversaries">Add Contact anniversaries</string>
    <string name="no_anniversaries">No anniversaries have been found</string>
    <string name="anniversaries_added">Anniversaries added successfully</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No reminder</string>
    <string name="at_start">At start</string>
    <string name="custom">Custom</string>
    <string name="before">before</string>
    <string name="minutes_raw">minutes</string>
    <string name="hours_raw">hours</string>
    <string name="days_raw">days</string>
    <string name="add_another_reminder">Add another reminder</string>
    <string name="event_reminders">Event reminders</string>
    <plurals name="minutes_before">
        <item quantity="one">%d minute before</item>
        <item quantity="other">%d minutes before</item>
    </plurals>
    <plurals name="hours_before">
        <item quantity="one">%d hour before</item>
        <item quantity="other">%d hours before</item>
    </plurals>
    <plurals name="days_before">
        <item quantity="one">%d day before</item>
        <item quantity="other">%d days before</item>
    </plurals>
    <string name="importing">Importing…</string>
    <string name="exporting">Exporting…</string>
    <string name="import_events">Import events</string>
    <string name="export_events">Export events</string>
    <string name="import_events_from_ics">Import Events from an .ics file</string>
    <string name="export_events_to_ics">Export Events to an .ics file</string>
    <string name="events_imported_successfully">Events have been imported successfully</string>
    <string name="events_exported_successfully">Events have been exported successfully</string>
    <string name="importing_events_failed">Importing events failed</string>
    <string name="exporting_events_failed">Exporting events failed</string>
    <string name="importing_some_events_failed">Importing some events failed</string>
    <string name="exporting_some_events_failed">Exporting some events failed</string>
    <string name="default_event_type">Default event type</string>
    <string name="no_events_for_exporting">No events for exporting have been found</string>
    <string name="export_past_events_too">Export past events too</string>
    <string name="include_event_types">Include event types</string>
    <string name="filename_without_ics">Filename (without .ics)</string>
    <string name="no_title">No title</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="all_day">All-day</string>
    <string name="week">Week</string>
    <string name="event_types">Event types</string>
    <string name="add_new_type">Add a new type</string>
    <string name="edit_type">Edit type</string>
    <string name="type_already_exists">Type with this title already exists</string>
    <string name="color">Color</string>
    <string name="regular_event">Regular event</string>
    <string name="cannot_delete_default_type">Default event type cannot be deleted</string>
    <string name="select_event_type">Select an event type</string>
    <string name="move_events_into_default">Move affected events into the default event type</string>
    <string name="remove_affected_events">Permanently remove affected events</string>
    <string name="unsync_caldav_calendar">To remove a CalDAV calendar you have to unsynchronize it</string>
    <string name="holidays">Holidays</string>
    <string name="add_holidays">Add Holidays</string>
    <string name="national_holidays">National holidays</string>
    <string name="religious_holidays">Religious holidays</string>
    <string name="holidays_imported_successfully">Holidays have been successfully imported into a new event type</string>
    <string name="importing_some_holidays_failed">Importing some events failed</string>
    <string name="importing_holidays_failed">Importing holidays failed</string>
    <string name="manage_event_types">Manage event types</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="sunday_first">Sunday as first day</string>
    <string name="start_day_at">Start day at</string>
    <string name="end_day_at">End day at</string>
    <string name="week_numbers">Show week numbers</string>
    <string name="vibrate">Vibrate on reminder notification</string>
    <string name="reminder_sound">Reminder sound</string>
    <string name="default_event_reminder">Default event reminder</string>
    <string name="no_ringtone_picker">No app capable of setting ringtone found</string>
    <string name="no_ringtone_selected">None</string>
    <string name="day_end_before_start">The day cannot end earlier than it starts</string>
    <string name="caldav_sync">CalDAV sync</string>
    <string name="event_lists">Event lists</string>
    <string name="display_past_events">Display events from the past</string>
    <string name="snooze_delay">Postpone reminder with Snooze by</string>
    <string name="widgets">Widgets</string>
    <string name="replace_description_with_location">Replace Description with Location at list view entries</string>
    <string name="caldav">CalDAV</string>
    <string name="select_caldav_calendars">Select calendars to sync</string>
    <string name="manage_synced_calendars">Manage synced calendars</string>
    <string name="store_locally_only">Store locally only</string>
    <string name="refresh_caldav_calendars">Refresh CalDAV calendars</string>
    <string name="refreshing">Refreshing…</string>
    <string name="refreshing_complete">Refreshing complete</string>
    <string name="editing_calendar_failed">Editing calendar failed</string>
    <string name="syncing">Syncing…</string>
    <string name="synchronization_completed">Sync completed</string>
    <plurals name="by_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="by_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="never">Never</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday_letter">M</string>
    <string name="tuesday_letter">T</string>
    <string name="wednesday_letter">W</string>
    <string name="thursday_letter">T</string>
    <string name="friday_letter">F</string>
    <string name="saturday_letter">S</string>
    <string name="sunday_letter">S</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="advertisement">Advertisement</string>
    <string name="Exit">Exit</string>
</resources>